<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    tools:context=".Level14Audio">
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-6572711285388576/7425942185"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.gms.ads.AdView>

    <ImageView
        android:id="@+id/mg1"
        android:layout_width="408dp"
        android:layout_height="265dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/toefl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/mg1"
        android:background="@drawable/bg_menu"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cr1"
                    android:layout_marginTop="0dp"
                    android:layout_width="match_parent"
                    app:cardBackgroundColor="#ff75a0"
                    android:layout_height="90dp"
                    android:layout_marginLeft="15sp"
                    android:layout_marginRight="15sp"
                    app:cardCornerRadius="30dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_margin="0dp"
                        android:orientation="vertical">


                        <TextView
                            android:fontFamily="serif"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/t_unit5"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:textColor="#FFF"
                            android:textSize="40sp" />

                    </LinearLayout>



                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cr2"
                    app:cardBackgroundColor="#F1C52A"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginLeft="15sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15sp"
                    app:cardCornerRadius="30dp">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_margin="0dp"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/t_unit6"
                            android:textAlignment="center"
                            android:fontFamily="serif"
                            android:textStyle="bold"
                            android:textColor="#FFF"
                            android:textSize="40sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/cr3"
                    app:cardBackgroundColor="#ffcb91"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginLeft="15sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15sp"
                    app:cardCornerRadius="30dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_margin="0dp"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/t_unit7"
                            android:textAlignment="center"
                            android:fontFamily="serif"
                            android:textStyle="bold"
                            android:textColor="#FFF"
                            android:textSize="40sp" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/cr4"
                    app:cardBackgroundColor="#95e1d3"

                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginLeft="15sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15sp"
                    app:cardCornerRadius="30dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_margin="0dp"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/t_unit8"                         android:fontFamily="serif"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:textColor="#FFF"
                            android:textSize="40sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:alpha="0"
                    app:cardBackgroundColor="#F0657A"

                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginLeft="15sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15sp"
                    app:cardCornerRadius="30dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_margin="0dp"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/t6"                         android:fontFamily="serif"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:textColor="#FFF"
                            android:textSize="40sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>





            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>