<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    tools:context=".Main2Activity">


    <TextView
        android:id="@+id/tv1"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="15dp"
        android:text="@string/restaurant"
        android:textColor="#FFF"
        android:textSize="40dp"
        android:textStyle="bold"
        android:fontFamily="serif"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView

        android:id="@+id/imageView2"
        android:layout_width="408dp"
        android:layout_height="258dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/toefl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1" />

    <LinearLayout
        android:background="@drawable/bg_menu"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:orientation="vertical"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">

            <LinearLayout

                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/cr1"
                    android:orientation="vertical"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:background="@drawable/bg_green"
                    android:layout_width="match_parent"
                    android:layout_height="120dp">

                    <ImageView
                        android:layout_marginTop="12dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginBottom="20dp"
                        android:src="@drawable/ic_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView

                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/tmm"
                        android:textColor="#FFF"
                        android:textSize="18dp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/cr2"
                    android:orientation="vertical"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:background="@drawable/bg_red"
                    android:layout_width="match_parent"
                    android:layout_height="120dp">

                    <ImageView
                        android:layout_marginTop="12dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginBottom="20dp"
                        android:src="@drawable/ic_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView

                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/t1"
                        android:textColor="#FFF"
                        android:textSize="18dp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/cr3"
                    android:orientation="vertical"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:background="@drawable/bg_blue"
                    android:layout_width="match_parent"
                    android:layout_height="120dp">

                    <ImageView
                        android:layout_marginTop="12dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginBottom="20dp"
                        android:src="@drawable/ic_three"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView

                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/t2"

                        android:textColor="#FFF"
                        android:textSize="18dp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
        <LinearLayout

            android:paddingBottom="24dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/cr4"
                    android:orientation="vertical"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:background="@drawable/bg_move"
                    android:layout_width="match_parent"
                    android:layout_height="120dp">

                    <ImageView
                        android:layout_marginTop="12dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginBottom="20dp"
                        android:src="@drawable/ic_baseline_filter_4_24"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView

                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/mmmm"
                        android:textColor="#FFF"
                        android:textSize="18dp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/cr5"
                    android:orientation="vertical"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:background="@drawable/bg_yellow"
                    android:layout_width="match_parent"
                    android:layout_height="120dp">

                    <ImageView
                        android:layout_marginTop="12dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginBottom="20dp"
                        android:src="@drawable/ic_baseline_filter_5_24"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView

                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/t7"
                        android:textColor="#FFF"
                        android:textSize="18dp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:alpha="0"
                    android:id="@+id/cr6"
                    android:orientation="vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/bg_green"
                    android:layout_width="match_parent"
                    android:layout_height="120dp">



                    <TextView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="TOEFL ITP"
                        android:textColor="#FFF"
                        android:textSize="18dp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>